fix :hammer: Fix Update City field State ID
